--- a/sandbox.html
+++ b/sandbox.html
@@ -10,209 +10,109 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e4043bb875.js" crossorigin="anonymous"></script>
 
     <!--  Custom CSS Styles -->
-    <link rel="stylesheet" href="css/sandbox.css">
+    <link rel="stylesheet" href="css/t-block.css">
 
-    <title>Codeup Design</title>
+    <title>T-Block Resume</title>
 
 </head>
 <body>
-<!--LOGO-->
-<div id="banner"></div>
-<main class="my-container">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-sm-2 order-sm-2 order-md-1 col-md-2 col-lg-3 align-self-center p-0">
-                <img src="assets/logo.png" class="mx-auto ml-lg-25 d-block logo" alt="logo">
-            </div>
-            <div class="col-12 col-sm-12 order-sm-4 col-md-5 order-md-2 col-lg-5 align-self-center m-0">
-                <h3 class="abel text-center text-md-left">codeup design</h3>
-            </div>
-            <!--NAVBAR-->
-            <div class="col-6 col-sm-5 order-sm-1 order-md-3 col-md-2 col-lg-2 align-self-center p-auto m-0">
-                <ul class="nav navbar-expand-sm float-right">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">SERVICES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">WORK</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-6 col-sm-5 order-sm-3  order-md-4 col-md-2 col-lg-2 align-self-center p-auto m-0">
-                <ul class="nav navbar-expand-sm services">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">BLOG</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!--BELOW ARE HEADERS-->
-        <br>
-        <div class="row">
-            <div class="col-12 col-xs-11 col-sm-11 col-md-12 text-center">
-                <h1 class="anton">VISUAL DESIGN & WEB DEVELOPMENT</h1>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-12 text-center">
-                <h2 class="anton">FROM PARK CITY, UTAH</h2>
-            </div>
-        </div>
-        <!--BELOW ARE CIRCLES-->
-        <br>
-        <div class="container-fluid ">
-            <div class="row justify-content-center text-center text-white">
-                <div class="col-6 col-sm-3 col-md-4 col-lg-2 p-md-0 d-flex justify-content-end">
-                    <p class="text-circles red anton">DESIGN</p>
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 p-md-0 d-flex justify-content-sm-center justify-content-start">
-                    <p class="text-circles gold anton">DEVELOP</p>
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 p-md-0 d-flex justify-content-sm-center justify-content-end">
-                    <p class="text-circles green anton">SUPPORT</p>
-                </div>
-                <div class="col-6 col-sm-3 col-md-4 col-lg-2 p-md-0 d-flex justify-content-start">
-                    <p class="text-circles aqua anton">HOST</p>
-                </div>
-            </div>
-            <!--ABOVE CIRCLES / BELOW LINE-->
-            <div class="d-none d-sm-block">
-                <hr/>
-            </div>
-            <!--ABOVE GREY LINE-->
-            <!--BELOW IMAGES-->
-            <div class="row d-flex">
-                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 d-flex justify-content-center justify-content-md-start">
-                    <p class="abel">SELECTED WORK</p>
-                </div>
-                <div class="col-lg-4 col-md-4 d-none d-md-block justify-content-end">
-                    <p class="abel p-style">THE LAST</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/apple-ipad.jpg" alt="apple">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <div class=" col-sm-6 col-md-4 col-lg-4 d-none d-sm-block">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/macbook.jpg" alt="macbook">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <!-----another column---->
-                <div class="d-none d-md-block col-md-4">
-                    <div class="w-100">
-                    </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <img src="assets/images/mobile-phone.jpg" alt="mobile" class="img-thumbnail mini mb-4">
-                        </div>
-                        <div class="col-8">
-                            <div class="d-flex justify-content-between align-items-center w-100 p-0 mb-4">
-                                <h5 class="d-flex">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <img src="assets/images/head.jpg" alt="head" class="img-thumbnail mini mt-4">
-                        </div>
-                        <div class="col-8">
-                            <div class="d-flex justify-content-between align-items-center w-100 p-0 mt-4">
-                                <h5>NIBBLER AWESOME WEBSITE TESTING</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-4 d-none d-sm-block">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/man.jpg" alt="man">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 d-none d-sm-block">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/security.jpg " alt="security">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <div class=" d-none d-md-block col-md-4">
-                    <div class ="row">
-                        <div class="col-4">
-                            <div class="w-100">
-                                <img src="assets/images/ipad.jpg" alt="i-pad" class="img-thumbnail mini mb-4 mt-4">
-                            </div>
-                        </div>
-                        <div class = "col-8">
-                            <div class="d-flex justify-content-between align-items-center w-100 p-0 mb-4 mt-4">
-                                <h5>HOW TO GET GOOGLE TO LIKE YOU</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class ="row">
-                        <div class="col-2">
-                            <img src="assets/images/twitter_PNG3.png" alt="twitter logo" class="logo-2">
-                        </div>
-                        <div class="col-10">
-                            <p class="abel mt-2">LAST TWEET</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <p class="abel">Lorem ipsum dolor sit amet,
-                                consectetuer adipiscing elit, sed diam nonummy nibh euismod sorem ipsum dolor sit amer,
-                                consectetuer adipiscing.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
+
+<!-- Begin Container -->
+
+<!--<div class="container">-->
+<!--  <div class="row">-->
+<!--    <div class="col">-->
+<!--      Column-->
+<!--    </div>-->
+<!--    <div class="col">-->
+<!--      Column-->
+<!--    </div>-->
+<!--    <div class="col">-->
+<!--      Column-->
+<!--    </div>-->
+<!--    <div class="col">-->
+<!--      Column-->
+<!--    </div>-->
+<!--    <div class="col">-->
+<!--      Column-->
+<!--    </div>-->
+<!--    <div class="col">-->
+<!--      Column-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<div class="row">
+    <!--HERO scene-->
+    <section class="row text-center subheading">
+        <h1>CODY THE DUCK</h1>
+        <h2>Software Developer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid architecto blanditiis distinctio eaque ex harum hic illo incidunt molestiae molestias nam numquam quaerat, quod saepe, similique sit soluta voluptates!</p>
+        <ul id="contactInfo" class="row">
+            <li class="col-md-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill me-2" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+            </svg>
+                210-123-1234</li>
+            <li class="col-md-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill me-2" viewBox="0 0 16 16">
+                <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+            </svg>cody@codeup.com</li>
+            <li class="col-md-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin me-2" viewBox="0 0 16 16">
+                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+            </svg>@cody-the-duck</li>
+            <li class="col-md-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github me-2" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+            </svg>
+                @cody-the-duck</li>
+        </ul>
+    </section>
+    <hr>
+    <!--Skills / Academic / Professional Experience-->
+    <section class="row ms-2">
+        <section class="col-md-4">
+            <h2>SKILLS AND ABILITIES</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Bootstrap</li>
+            </ul>
+            <h2>ACADEMIC</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto cupiditate eligendi, esse eum ex fuga, laboriosam quaerat quas tempora temporibus totam velit, veritatis. Autem dolorem dolores, earum quas reprehenderit voluptate.</p>
+            <h2>PROFESSIONAL EXPERIENCE</h2>
+            <h6>Job 2</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, eligendi excepturi hic incidunt laudantium unde velit. Adipisci impedit iure minima numquam possimus saepe, tempora ut vero voluptatibus! Commodi, rem, sit?</p>
+            <h6>Job 1</h6>
+            <h6>Job 1</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci, corporis esse eum excepturi id iure maiores molestiae nemo, non pariatur perspiciatis qui quia quibusdam reprehenderit sed, sequi vero voluptates!</p>
+
+        </section>
+        <!-- Development Projects / awards and Involvement-->
+        <section class="col-md-8">
+            <h2>DEVELOPMENT PROJECTS</h2>
+            <h6>Project 3</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto asperiores corporis fuga ipsum itaque, nam nisi non omnis quae quibusdam quis sequi tempore voluptate, voluptatibus. Id quibusdam reiciendis veritatis!</p>
+            <h6>Project 2</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto asperiores corporis fuga ipsum itaque, nam nisi non omnis quae quibusdam quis sequi tempore voluptate, voluptatibus. Id quibusdam reiciendis veritatis!</p>
+            <h6>Project 1</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto asperiores corporis fuga ipsum itaque, nam nisi non omnis quae quibusdam quis sequi tempore voluptate, voluptatibus. Id quibusdam reiciendis veritatis!</p>
+
+            <h2>AWARDS AND INVOLVEMENT</h2>
+            <h6>AWARD 1</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequatur eius et eveniet, facere necessitatibus nisi non quia quod quos, repudiandae, sequi tenetur. Consequatur in numquam praesentium tenetur ut veritatis!</p>
+            <h6>INVOLVEMENT 1</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dignissimos et expedita explicabo harum incidunt iure iusto laboriosam nostrum officiis omnis rem sunt unde veritatis, voluptate! Amet eveniet repellat voluptate!</p>
+
+
+        </section>
+    </section>
+</div>
+
+
+
+
 
 <!-- End Container -->
 
