--- a/sandbox.html
+++ b/sandbox.html
@@ -23,7 +23,64 @@
 <body>
 <!--Begin Container-->
 
-
+<div class="page-wrapper">
+    <!--- header containing logo and title --->
+    <header class="container">
+        <div class="row head">
+            <div class="column">
+                <img class="coffee-pic" src="images/coffeelogobrandnew.png" alt="coffee">
+            </div>
+            <div class="column align-center justify-center">
+                <h1>Codeup Coffee</h1>
+            </div>
+        </div>
+    </header>
+    <!--- main page --->
+    <main class="container">
+        <div class="row main grow">
+            <!--- div where coffees are added --->
+            <div class="coffee-column column">
+                <div id="coffees">
+                </div>
+            </div>
+            <!--- right column for the forms --->
+            <div class="column right align-center">
+                <!--- form to search coffee --->
+                <form class="coffee-form" method="" action="">
+                    <h3>Search  Our Coffee</h3>
+                    <label for="roast-selection">Roast</label>
+                    <select id="roast-selection">
+                        <option value="all">All</option>
+                        <option value="light">light</option>
+                        <option value="medium">medium</option>
+                        <option value="dark">dark</option>
+                    </select>
+                    <label for="roast-search">Coffee Name</label>
+                    <input id="roast-search" name="roast-select" type="text" placeholder="">
+                </form>
+                <!--- form to add coffee --->
+                <form class="coffee-add" method="" action="">
+                    <h3>Add A Coffee</h3>
+                    <label for="coffee-add">Roast</label>
+                    <select id="coffee-add" name="coffee-add">
+                        <option value="light">light</option>
+                        <option value="medium">medium</option>
+                        <option value="dark">dark</option>
+                    </select>
+                    <label for="name-add">Coffee Name</label>
+                    <input id="name-add" name="name-add" type="text" placeholder="">
+                    <div class="buttons row">
+                        <button id="submit1">Add</button>
+                        <button id="submit2">Clear</button>
+                    </div>
+                </form>
+                <div>
+                    <img class="gif" src="images/coffeesteam.gif" alt="coffee">
+                </div>
+            </div>
+        </div>
+    </main>
+</div>
 
 
 
