--- a/working.html
+++ b/working.html
@@ -19,202 +19,117 @@
 
 </head>
 <body>
-<!--LOGO-->
-<div id="banner"></div>
-<main class="my-container">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-sm-2 order-sm-2 order-md-1 col-md-2 col-lg-3 align-self-center p-0">
-                <img src="assets/logo.png" class="mx-auto ml-lg-25 d-block logo" alt="logo">
-            </div>
-            <div class="col-12 col-sm-12 order-sm-4 col-md-5 order-md-2 col-lg-5 align-self-center m-0">
-                <h3 class="abel text-center text-md-left">codeup design</h3>
-            </div>
-            <!--NAVBAR-->
-            <div class="col-6 col-sm-5 order-sm-1 order-md-3 col-md-2 col-lg-2 align-self-center p-auto m-0">
-                <ul class="nav navbar-expand-sm float-right">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">SERVICES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">WORK</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-6 col-sm-5 order-sm-3  order-md-4 col-md-2 col-lg-2 align-self-center p-auto m-0">
-                <ul class="nav navbar-expand-sm services">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">BLOG</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!--BELOW ARE HEADERS-->
-        <br>
-        <div class="row">
-            <div class="col-12 col-xs-11 col-sm-11 col-md-12 text-center">
-                <h1 class="anton">VISUAL DESIGN & WEB DEVELOPMENT</h1>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-12 text-center">
-                <h2 class="anton">FROM PARK CITY, UTAH</h2>
-            </div>
-        </div>
-        <!--BELOW ARE CIRCLES-->
-        <br>
-        <div class="container-fluid ">
-            <div class="row justify-content-center text-center text-white">
-                <div class="col-6 col-sm-3 col-md-4 col-lg-2 p-md-0 d-flex justify-content-end">
-                    <p class="text-circles red anton">DESIGN</p>
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 p-md-0 d-flex justify-content-sm-center justify-content-start">
-                    <p class="text-circles gold anton">DEVELOP</p>
-                </div>
-                <div class="col-6 col-sm-3 col-md-2 col-lg-2 p-md-0 d-flex justify-content-sm-center justify-content-end">
-                    <p class="text-circles green anton">SUPPORT</p>
-                </div>
-                <div class="col-6 col-sm-3 col-md-4 col-lg-2 p-md-0 d-flex justify-content-start">
-                    <p class="text-circles aqua anton">HOST</p>
-                </div>
-            </div>
-            <!--ABOVE CIRCLES / BELOW LINE-->
-            <div class="d-none d-sm-block">
-                <hr/>
-            </div>
-            <!--ABOVE GREY LINE-->
-            <!--BELOW IMAGES-->
-            <div class="row d-flex">
-                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 d-flex justify-content-center justify-content-md-start">
-                    <p class="abel">SELECTED WORK</p>
-                </div>
-                <div class="col-lg-4 col-md-4 d-none d-md-block justify-content-end">
-                    <p class="abel p-style">THE LAST</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-4">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/apple-ipad.jpg" alt="apple">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <div class=" col-sm-6 col-md-4 col-lg-4 d-none d-sm-block">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/macbook.jpg" alt="macbook">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <!-----another column---->
-                <div class="d-none d-md-block col-md-4">
-                    <div class="w-100">
-                    </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <img src="assets/images/mobile-phone.jpg" alt="mobile" class="img-thumbnail mini mb-4">
-                        </div>
-                        <div class="col-8">
-                            <div class="d-flex justify-content-between align-items-center w-100 p-0 mb-4">
-                                <h5 class="d-flex">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <img src="assets/images/head.jpg" alt="head" class="img-thumbnail mini mt-4">
-                        </div>
-                        <div class="col-8">
-                            <div class="d-flex justify-content-between align-items-center w-100 p-0 mt-4">
-                                <h5>NIBBLER AWESOME WEBSITE TESTING</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-4 d-none d-sm-block">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/man.jpg" alt="man">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 d-none d-sm-block">
-                    <div class="w-100">
-                        <img class="w-100 img-thumbnail" src="assets/images/security.jpg " alt="security">
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center w-100">
-                        <p class="abel m-0">FEATURED PROJECT</p>
-                        <div>
-                            <span class="dot dot-r">D</span>
-                            <span class="dot dot-g">D</span>
-                            <span class="dot dot-gr">S</span>
-                            <span class="dot dot-a">H</span>
-                        </div>
-                    </div>
-                </div>
-                <div class=" d-none d-md-block col-md-4">
-                    <div class ="row">
-                        <div class="col-4">
-                            <div class="w-100">
-                                <img src="assets/images/ipad.jpg" alt="i-pad" class="img-thumbnail mini mb-4 mt-4">
-                            </div>
-                        </div>
-                        <div class = "col-8">
-                            <div class="d-flex justify-content-between align-items-center w-100 p-0 mb-4 mt-4">
-                                <h5>HOW TO GET GOOGLE TO LIKE YOU</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class ="row">
-                        <div class="col-2">
-                            <img src="assets/images/twitter_PNG3.png" alt="twitter logo" class="logo-2">
-                        </div>
-                        <div class="col-10">
-                            <p class="abel mt-2">LAST TWEET</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <p class="abel">Lorem ipsum dolor sit amet,
-                                consectetuer adipiscing elit, sed diam nonummy nibh euismod sorem ipsum dolor sit amer,
-                                consectetuer adipiscing.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
 
-<!-- End Container -->
+
+<!--Begin Container-->
+
+<section id="navbar">
+    <nav class="navbar navbar-light navbar-expand-lg">
+        <div class="container-fluid">
+            <img src="img/coffeeTest.png" style="width:100px">
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#supportedContent"
+                    aria-controls="#supportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" tabindex="-1" id="supportedContent"
+                 aria-labelledby="supportedContent">
+                <div class="collapse-body">
+
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="navbar-brand d-block" href="#">Codeup Coffee</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 1" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 2" href="#">Our Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 3" href="#">Our Roast</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+</section>
+
+
+
+
+
+
+
+
+
+<!--<div>-->
+<!--    &lt;!&ndash;- header containing logo and title -&ndash;&gt;-->
+<!--    <header class="container-fluid">-->
+<!--        <div class="row head">-->
+<!--            <div class="column">-->
+<!--                <img class="coffee-pic" src="img/coffeeTest.png" alt="coffee">-->
+<!--            </div>-->
+<!--            <div class="column">-->
+<!--                <h1>Codeup Coffee</h1>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </header>-->
+<!--    &lt;!&ndash;- main page -&ndash;&gt;-->
+
+
+
+    <main class="container">
+        <div class="row main grow">
+            <!--- div where coffees are added --->
+            <div class="coffee-column column">
+                <div id="coffees">
+                </div>
+            </div>
+            <!--- right column for the forms --->
+            <div class="column right align-center">
+                <!--- form to search coffee --->
+                <form class="coffee-form" method="" action="">
+                    <h3>Search  Our Coffee</h3>
+                    <label for="roast-selection">Roast</label>
+                    <select id="roast-selection">
+                        <option value="all">All</option>
+                        <option value="light">light</option>
+                        <option value="medium">medium</option>
+                        <option value="dark">dark</option>
+                    </select>
+                    <label for="roast-search">Coffee Name</label>
+                    <input id="roast-search" name="roast-select" type="text" placeholder="">
+                </form>
+                <!--- form to add coffee --->
+                <form class="coffee-add" method="" action="">
+                    <h3>Add A Coffee</h3>
+                    <label for="coffee-add">Roast</label>
+                    <select id="coffee-add" name="coffee-add">
+                        <option value="light">light</option>
+                        <option value="medium">medium</option>
+                        <option value="dark">dark</option>
+                    </select>
+                    <label for="name-add">Coffee Name</label>
+                    <input id="name-add" name="name-add" type="text" placeholder="">
+                    <div class="buttons row">
+                        <button id="submit1">Add</button>
+                        <button id="submit2">Clear</button>
+                    </div>
+                </form>
+                <div>
+                    <img class="gif" src="images/coffeesteam.gif" alt="coffee">
+                </div>
+            </div>
+        </div>
+    </main>
+</div>
+
+
+
+<!--End Container-->
 
 
 <!--Bootstrap JS-->
@@ -222,6 +137,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
+<script src="js/working.js"></script>
+
+
 
 </body>
 </html>
